--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,9 +19,9 @@ jobs:
           command: |
             sudo gem update --system
             sudo gem install rspec
-            sudo gem uninstall bundler
+            sudo gem uninstall bundler 1.17.2 
             sudo rm /usr/local/bin/bundle
-            sudo gem install bundler
+            sudo gem install bundler 2.0.1 
             bundle install --jobs=4 --retry=3 --path vendor/bundle
           
     steps:
