--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,6 +25,8 @@ jobs:
           name: install dependencies
           command: |
             sudo gem update --system
+            sudo gem uninstall bundler
+            sudo rm /usr/local/bin/bundle
             sudo gem install bundler
             bundle install --path vendor/bundle
 
