--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,11 +43,7 @@ jobs:
       - run: bundle exec rake db:setup      
       #run tests
       - run:   |
-            bundle exec rspec --profile 10 \
-                              --format RspecJunitFormatter \
-                              --out test_results/rspec.xml \
-                              --format progress \
-                              $(circleci tests glob "spec/**/*_spec.rb" | circleci tests split --split-by=timings)
+            bundle exec rspec 
 
 
 
